Completed items: 1. Google signin redirect page fixed. 2. Fixed missing cursor. 3. Fixed recipes filter/sort btn not hide. 4. Fixed upload popup btn not align.

--- a/src/Pages/Home/homePage.css
+++ b/src/Pages/Home/homePage.css
@@ -110,6 +110,7 @@ a {
 	text-align: center;
 	color: #ffffff;
 	border-radius: 0px 5px 5px 0px;
+	cursor: pointer;
 }
 .section-home {
 	position: relative;
