--- a/src/Pages/Recipes/Recipes.css
+++ b/src/Pages/Recipes/Recipes.css
@@ -13,6 +13,9 @@
 	justify-content: space-around;
 	flex-wrap: wrap;
 }
+.recipes-dishCard:hover {
+	box-shadow: 2px 2px 15px 1px rgba(0, 0, 0, 0.2);
+}
 .recipes-dishCard {
 	color: #000000;
 	width: 290px;
@@ -45,6 +48,7 @@
 	margin-left: 30px;
 	position: relative;
 	padding: 2.5px 5px;
+	cursor: pointer;
 }
 .active {
 	border: solid 1px #bba67c;
@@ -74,6 +78,7 @@
 	background-color: #ffffff;
 	padding: 2.5px 5px;
 	margin-right: 20px;
+	cursor: pointer;
 }
 i {
 	font-style: normal;
@@ -187,6 +192,9 @@ i {
 		box-shadow: 0px 0px 5px;
 		z-index: 100;
 	}
+	.filter-sort-mobile-btn.hide {
+		display: none;
+	}
 	.recipes-article {
 		margin-top: 70px;
 		width: 90%;
@@ -216,5 +224,8 @@ i {
 	.filter-sort-mobile-btn {
 		display: flex;
 		font-size: 16px;
+	}
+	.filter-sort-mobile-btn.hide {
+		display: none;
 	}
 }
