--- a/src/Pages/Upload/UploadRecipe.css
+++ b/src/Pages/Upload/UploadRecipe.css
@@ -1,167 +1,172 @@
-.upload-cont{
-    margin-top: 56px;
-    margin-bottom: 50px;
-    padding-bottom: 50px;
+.upload-cont {
+	margin-top: 56px;
+	margin-bottom: 50px;
+	padding-bottom: 50px;
 }
-.upload-title{
-    text-align: center;
-    padding: 50px 0;
+.upload-title {
+	text-align: center;
+	padding: 50px 0;
 }
-.dish-info-cont{
-    box-shadow: 1px 0.5px 10px 0px;
-    max-width:1200px;
-    margin: 0 auto;
+.dish-info-cont {
+	box-shadow: 1px 0.5px 10px 0px;
+	max-width: 1200px;
+	margin: 0 auto;
 }
-.dish-cont{
-    padding: 20px 50px;
+.dish-cont {
+	padding: 20px 50px;
 }
 .dish-label {
-    display: flex;
-    margin: 10px 0;
-    align-items: center;
+	display: flex;
+	margin: 10px 0;
+	align-items: center;
 }
-.input{
-    border:solid 1px #757575;
-    border-radius: 5px;
-    height:35px;
-    width:100px;
-    font-size: 18px;
-    text-align: center;
+.input {
+	border: solid 1px #757575;
+	border-radius: 5px;
+	height: 35px;
+	width: 100px;
+	font-size: 18px;
+	text-align: center;
 }
-.upload-img-cont{
-    position: relative;
-    width: 100%;
-    max-width: 400px;
-    height: 250px;
-    cursor: pointer;
-    border:solid 1px #757575;
-    border-radius: 5px;
+.upload-img-cont {
+	position: relative;
+	width: 100%;
+	max-width: 400px;
+	height: 250px;
+	cursor: pointer;
+	border: solid 1px #757575;
+	border-radius: 5px;
 }
-.input-dish-pic{
-    opacity: 0;
-    position: absolute;
-    width:100%;
-    height:100%;
-    cursor: pointer;
+.input-dish-pic {
+	opacity: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	cursor: pointer;
 }
-.upload-img{
-    width:100%;
-    height:100%;
-    z-index: 1;
+.upload-img {
+	width: 100%;
+	height: 100%;
+	z-index: 1;
 }
-.label-upload-img{
-    position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%); /* 扣除本體後的置中 */
+.label-upload-img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%); /* 扣除本體後的置中 */
 }
-.time{
-    display: flex;
-    align-items: center;
+.time {
+	display: flex;
+	align-items: center;
 }
-.mins{
-    margin-left: 5px;
+.mins {
+	margin-left: 5px;
 }
-.difficulty, .tool{
-    position: relative;
-    top:10px;
+.difficulty,
+.tool {
+	position: relative;
+	top: 10px;
 }
-.cook-tool-item{
-    position: relative;
-    padding: 5px 10px;
-    border:solid 1px #757575;
-    border-radius: 5px;
-    margin-right: 10px;
+.cook-tool-item {
+	position: relative;
+	padding: 5px 10px;
+	border: solid 1px #757575;
+	border-radius: 5px;
+	margin-right: 10px;
+	cursor: pointer;
 }
-.cook-tool-item input{
-    opacity:0;
-    position: absolute;
+.cook-tool-item input {
+	opacity: 0;
+	position: absolute;
 }
-.checked{
-    color: #fff;
-    border:solid 1px #BBA67C;
-    background-color: #BBA67C;
-    border-radius: 5px;
+.checked {
+	color: #fff;
+	border: solid 1px #bba67c;
+	background-color: #bba67c;
+	border-radius: 5px;
 }
-.dish-ingredient, .dish-direction{
-    width: 1000px;
-    text-align: left;
-    resize: none;
+.dish-ingredient,
+.dish-direction {
+	width: 1000px;
+	text-align: left;
+	resize: none;
 }
-.corss{
-    cursor: pointer;
+.corss {
+	cursor: pointer;
 }
-.ingre-content, .step-content{
-    display: flex;
-    align-items: center;
-    margin-top: 20px;
-    margin-left: 40px;
+.ingre-content,
+.step-content {
+	display: flex;
+	align-items: center;
+	margin-top: 20px;
+	margin-left: 40px;
 }
-.upload-describe{
-    color:#757575;
-    font-size: 18px;
+.upload-describe {
+	color: #757575;
+	font-size: 18px;
 }
-.btn-cont{
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
+.btn-cont {
+	display: flex;
+	justify-content: center;
+	margin-top: 20px;
 }
-.btn-add{
-    width:200px;
-    height:40px;
-    border:solid 2px #BBA67C;
-    border-radius: 4px;
+.btn-add {
+	width: 200px;
+	height: 40px;
+	border: solid 2px #bba67c;
+	border-radius: 4px;
 }
-.btn-add:hover{
-    background-color: #BBA67C;
+.btn-add:hover {
+	background-color: #bba67c;
 }
-.btn-submit-cont{
-    padding: 0 50px 20px 0;
-    text-align: end;
+.btn-submit-cont {
+	padding: 0 50px 20px 0;
+	text-align: end;
 }
-.btn-submit{
-    width: 200px;
-    height:40px;
-    border-radius: 4px;
+.btn-submit {
+	width: 200px;
+	height: 40px;
+	border-radius: 4px;
 }
-.upload-error-message{
-    color:red;
-    font-size: 18px;
-    margin-left: 20px;
+.upload-error-message {
+	color: red;
+	font-size: 18px;
+	margin-left: 20px;
 }
 
-@media (min-width:600px) and (max-width:1200px){
-    .dish-info-cont{
-        width:90%;
-    }
+@media (min-width: 600px) and (max-width: 1200px) {
+	.dish-info-cont {
+		width: 90%;
+	}
 }
-@media (min-width:360px) and (max-width:600px){
-    .dish-info-cont{
-        width:90%;
-    }
-    .dish-name{
-        width:100%;
-    }
-    .label-upload-img{
-        font-size: 18px;
-    }
-    .tool{
-        display: grid;
-        grid-template-columns: auto auto;
-        gap:5px;
-    }
-    .cook-tool-item{
-        text-align: center;
-        font-size: 16px;
-    }
-    .ingre-content, .step-content{
-        margin-left: 0;
-    }
-    .dish-direction{
-        height:100px;
-    }
-    .btn-submit-cont{
-        padding: 0 0 20px 0;
-        text-align: center;
-    }
+@media (min-width: 360px) and (max-width: 600px) {
+	.dish-info-cont {
+		width: 90%;
+	}
+	.dish-name {
+		width: 100%;
+	}
+	.label-upload-img {
+		font-size: 18px;
+	}
+	.tool {
+		display: grid;
+		grid-template-columns: auto auto;
+		gap: 5px;
+	}
+	.cook-tool-item {
+		text-align: center;
+		font-size: 16px;
+	}
+	.ingre-content,
+	.step-content {
+		margin-left: 0;
+	}
+	.dish-direction {
+		height: 100px;
+	}
+	.btn-submit-cont {
+		padding: 0 0 20px 0;
+		text-align: center;
+	}
 }
